--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "html2canvas": "^1.4.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
