--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.12",
     "react-toastify": "^9.1.2",
     "sass": "^1.58.3",
     "swiper": "^9.0.5",
